src/main/java/com/example/sustainance/Errors/UserAlreadyExistsException.java
package com.example.sustainance.Errors;

public class UserAlreadyExistsException extends Exception{
    public UserAlreadyExistsException(String message) {
        super(message);
    }
}
